theme: fix sidelist shadow
The current sidelist shadow appears as a light
shadow over a light gray background. This breaks
the impression of depth that this shadow was designed
for, and makes it look strange on the dark variant
of Adwaita.

Fix that by setting the color to translucid black.

https://bugzilla.gnome.org/show_bug.cgi?id=769774

--- a/data/application.css
+++ b/data/application.css
@@ -34,11 +34,11 @@ GtkTreeView{
 }
 
 .side-panel .view:dir(ltr) {
-    box-shadow: inset -10px 0 5px -10px @borders;
+    box-shadow: inset -10px 0 5px -10px alpha(black, 0.25);
 }
 
 .side-panel .view:dir(rtl) {
-    box-shadow: inset 10px 0 5px -10px @borders;
+    box-shadow: inset 10px 0 5px -10px alpha(black, 0.25);
 }
 
 .side-panel .view:selected {
